--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/lodash.chunk": "^4.2.7",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "lodash.chunk": "^4.2.0",
+    "sass": "^1.51.0",
     "typescript": "4.6.4"
   }
 }
